# rs-remediate

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
examples/: 1.rem  2.rem  3.rem  test.rem
src/: archive.rs  deck.rs  document.pest  document.rs  file.rs  learn.rs  lib.rs  main.rs  schedule.rs  serialize.rs  session.rs  tests.rs  with.rs  workspace.rs
src/archive/: with.rs
src/archive/impls/: reverse.rs
src/archive/with/: binary_heap.rs
src/deck/: cards.rs  document.pest  document.rs
src/document/: ast.rs  cards.rs  deserialize.rs  parser.pest  parser.rs  serialize.rs
src/schedule/: sm2.rs
src/serialize/: document.pest  document.rs  error.rs
src/session/: entry.rs
src/tests/: archive.rs  deck.rs  workspace.rs
src/workspace/: fs.rs
