[package]
name = "remedy"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
pest = "2.6.0"
pest_derive = "2.6.0"
from-pest = "0.3.2"
pest-ast = "0.3.3"
bincode = "1.3.3"
serde = "1.0.164"
rkyv = { version = "0.7.42", features = ["validation"] }
clap = { version = "4.3.3", features = ["derive"] }
num_enum = "0.6.1"