[package]
name = "remediate"
version = "0.1.1"
authors = ["Rowan Clarke <36474636+rowanclarke@users.noreply.github.com>"]
license = "MIT"
description = "Library for thinking and learning"
edition = "2021"
repository = "https://github.com/rowanclarke/rs-remediate"
readme = "README.md"
categories = ["parsing"]
keywords = ["learn", "revise", "think", "second-brain", "zettelkasten"]

[dependencies]
rand = "0.8.5"
pest = "2.6.0"
pest_derive = "2.6.0"
from-pest = "0.3.2"
pest-ast = "0.3.3"
bincode = "1.3.3"
serde = "1.0.164"
rkyv = { version = "0.7.42", features = ["validation"] }
num_enum = "0.6.1"
pathdiff = "0.2.1"

[dev-dependencies]
tempdir = "0.3.7"
once_cell = "1.18.0"